app/src/components/TodoItem/TodoItem.module.scss
.item {
  display: flex;
  align-items: center;
  transition: opacity 0.15s ease-out;
  &:hover {
    background: linear-gradient(90deg, #ffffff 0%, #f8f8f8 50%, #ffffff 100%);
    .text {
      text-decoration: none;
    }
  }
}

.completed {
  opacity: 0.4;
  .text {
    text-decoration: line-through;
  }
  .realCheckbox {
    &:checked + .styledCheckbox::before {
      content: "";
    }
    &:checked + .styledCheckbox {
      background-image: url("../../../images/icons/check.svg");
    }
  }
}

.checkboxContainer {
  width: 25px;
  height: 25px;
  border-radius: 7px;
  border: 1px solid #222;
}

.realCheckbox {
  &:hover + .styledCheckbox::before,
  &:focus-visible + .styledCheckbox::before {
    transform: translateY(4%) scale(1);
  }
}

.styledCheckbox {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
  cursor: pointer;
  &::before {
    content: url("../../../images/icons/check.svg");
    will-change: transform;
    transform: translateY(4%) scale(0);
    transition: all 0.2s ease-out;
  }
}

.text {
  max-width: 660px;
  width: 100%;
  padding: 10px 0 10px 15px;
  &:focus {
    outline: none;
    text-decoration: none;
  }
  &::placeholder {
    visibility: hidden;
    color: #bfbfbf;
  }
  &:focus::placeholder {
    visibility: visible;
  }
}

.delete {
  width: 25px;
  height: 25px;
  position: relative;
  &::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #ec9999;
    border-radius: 50%;
    transform: scale(0);
    transition: transform 0.3s ease-out;
    z-index: 0;
  }
  &::after {
    content: "";
    position: relative;
    display: block;
    height: 100%;
    background-image: url("../../../images/icons/cross.svg");
    background-repeat: no-repeat;
    background-position: center;
  }
  &:focus {
    outline: none;
  }
  &:hover::before,
  &:focus-visible::before {
    transform: scale(1);
  }
}

